--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,9 +1,24 @@
-<h3>Register</h3>
-<a href="{% url 'tasks' %}">GO BACK</a>
+{% extends 'base/main.html' %}
+{% block content %}
+
+<div class="header-bar">
+    <h3>Register</h3>
+
+</div>
+
+<div class="card-body">
+
 <form action="" method="post">
     {% csrf_token %}
     {{form.as_p}}
-<input type="submit" value="Register">
+<input type="submit" value="Register" class="button">
 </form>
 
 <p> Have An Account??? <a href="{% url 'login' %}">Login</a></p>
+
+</div>
+
+
+
+
+{% endblock content %}
