--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,5 +1,16 @@
-{% if request.user.is_authenticated %}
-<p>{{request.user}}</p>
+{% extends 'base/main.html' %}
+{% block content %}
+
+
+<div class="header-bar">
+    <div>
+        <h1>Hello {{request.user|title }}</h1>
+        <h3 style="margin: 0;">You Have <i>{{count}} incomplete task{{ count|pluralize:"s"}}</i></h3>
+
+    </div>
+
+    {% if request.user.is_authenticated %}
+
 <a href="{% url 'logout' %}">Logout</a>
 {% else %}
 <a href="{% url 'login' %}">Login</a>
@@ -7,36 +18,58 @@
 
 
 
+</div>
+
+<div id="search-add-wrapper">
+    <form action="" method="get" style="margin-top: 20px; display: flex;">
+        <input type="text" name="search-area" value="{{search_input}}" >
+        <input type="submit" value="search" class="button" style="margin-left: 10px;">
+    </form>
+    <a href="{% url 'task-create' %}" id="add-link">&#x2b;</a>
+
+</div>
 
 
-<h1>MY TO DO LIST</h1>
 
-<a href="{% url 'task-create' %}">ADD </a>
 
-<form action="" method="get">
-    <input type="text" name="search-area" value="{{search_input}}" >
-    <input type="submit" value="search">
-</form>
 
-<table>
-    <tr>
-        <th>ITEMS</th>
-        <th></th>
-        <th></th>
-    </tr>
 
+
+
+<div class="task-items-wrapper">
     {% for task in tasks %}
-    <tr>
-        <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
-        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+    <div class="text-wrapper ">
+        {% if task.complete %}
+        <div class="task-title">
+            <div class="task-complete-icon"></div>
+            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i>
 
-    </tr>
+        </div>
+        <a href="{% url 'task-delete' task.id %}" class="delete-link">&#215;</a>
+        {% else %}
+        <div class="task-title">
+            <div class="task-incomplete-icon"></div>
+            <a href="{% url 'task-update' task.id %}">{{task}}</a>
+        </div>
+        <a href="{% url 'task-delete' task.id %}" class="delete-link">&#215;</a>
+        {% endif %}    
+
+
+    </div>
+
     {% empty %}
     <h3>NO ITEMS IN LIST</h3>
     {% endfor %}
 
 
 
-</table>
+
+</div>
+
+
+
+
+
+
+
+{% endblock content %}
