--- a/base/templates/base/task_delete.html
+++ b/base/templates/base/task_delete.html
@@ -1,7 +1,25 @@
-<a href="{% url 'tasks'  %}">Go Back</a>
+{% extends 'base/main.html' %}
+{% block content %}
+
+
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+
+</div>
+
+<div class="card-body">
+
 <form action="" method="post">
     {% csrf_token %}
-    <p>are you Sure You WAnt To Delete {{task}}</p>
-    <input type="submit" value="Delete" name="" id="">
+    <p>Are you sure you want to delete  "{{task}}"</p>
+    <input type="submit" value="Delete" name="" id="" class="button ">
 
 </form>
+
+</div>
+
+
+
+
+
+{% endblock content %}
